<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.akshay.credstackview.home.plans.PlansViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/plans_view_bg" />

    <ImageView
      android:id="@+id/plans_view_expand"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:contentDescription="@string/plans_view_expand_icon"
      android:src="@drawable/ic_expand"
      android:visibility="@{viewModel.endTransition ? View.VISIBLE : View.GONE}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:onClick="@{viewModel::onClick}"
      app:visibilityMode="normal" />

    <TextView
      android:id="@+id/plans_view_question"
      style="@style/Heading1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="8dp"
      android:fontFamily="@font/axiforma_medium"
      android:letterSpacing="0.1"
      android:text="@string/plans_view_question"
      app:layout_constraintEnd_toStartOf="@+id/plans_view_expand"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/plans_view_message"
      style="@style/Heading2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:fontFamily="@font/axiforma_medium"
      android:letterSpacing="0.1"
      android:text="@string/plans_view_message"
      app:layout_constraintEnd_toEndOf="@+id/plans_view_question"
      app:layout_constraintStart_toStartOf="@+id/plans_view_question"
      app:layout_constraintTop_toBottomOf="@+id/plans_view_question" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/plans_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/plans_view_message"
      app:list="@{viewModel.credPlanItemModelList}" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/plans_view_create_plan"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:letterSpacing="0"
      android:text="@string/plans_view_create_plan"
      android:textColor="@color/white"
      android:textSize="12sp"
      app:cornerRadius="18dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/plans_recycler_view"
      app:strokeColor="@color/white" />

    <Button
      android:id="@+id/button2"
      style="@style/ProceedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/axiforma_medium"
      android:letterSpacing="0"
      android:padding="16dp"
      android:text="@string/plans_view_proceed"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textStyle="bold"
      android:visibility="@{viewModel.endTransition ? View.GONE : View.VISIBLE}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:onClick="@{viewModel::onClick}" />

    <include
      android:id="@+id/transaction_detail"
      layout="@layout/transaction_detail"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:visibility="@{viewModel.endTransition ? View.VISIBLE : View.GONE}"
      app:animate="@{viewModel.endTransition}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/plans_view_message" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>