...
  xmlns:motion="http://schemas.android.com/apk/res-auto">

  <Transition
    motion:constraintSetEnd="@+id/end"
    motion:constraintSetStart="@id/start"
    motion:duration="1000">
    <OnClick motion:targetId="@+id/button" />
    <KeyFrameSet>
      <KeyAttribute
        android:alpha="0"
        motion:framePosition="10"
        motion:motionTarget="@+id/button" />
      <KeyAttribute
        android:alpha="0"
        motion:framePosition="10"
        motion:motionTarget="@+id/credit_amount_question" />
    </KeyFrameSet>
  </Transition>

  <ConstraintSet android:id="@+id/start">
    <Constraint
      android:id="@+id/credit_amount_question"
...
