...
      android:text="@string/transaction_detail_message"
      app:layout_constraintEnd_toEndOf="@+id/transaction_detail_question"
      app:layout_constraintStart_toStartOf="@+id/transaction_detail_question"
      app:layout_constraintTop_toBottomOf="@+id/transaction_detail_question" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/transaction_detail_recycler_view"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="@+id/transaction_detail_message"
      app:layout_constraintStart_toStartOf="@+id/transaction_detail_question"
      app:layout_constraintTop_toBottomOf="@+id/transaction_detail_message"
...
